--- a/src/main/resources/connect-kafka.properties
+++ b/src/main/resources/connect-kafka.properties
@@ -2,4 +2,4 @@ bootstrap.servers=mini1:9092,mini2:9092,mini3:9092
 group.id=flink01
 key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
 value.deserializer=org.apache.kafka.common.serialization.StringDeserializer
-auto.offset.reset=earliest
+auto.offset.reset=latest
