--- a/pom.xml
+++ b/pom.xml
@@ -40,14 +40,14 @@
         <dependency>
             <groupId>org.apache.flink</groupId>
             <artifactId>flink-streaming-scala_2.11</artifactId>
-            <version>1.9.1</version>
+            <version>${flink.version}</version>
             <!--<scope>provided</scope>-->
         </dependency>
 
         <dependency>
             <groupId>org.apache.flink</groupId>
             <artifactId>flink-connector-kafka_2.11</artifactId>
-            <version>1.9.1</version>
+            <version>${flink.version}</version>
             <!--<scope>provided</scope>-->
         </dependency>
 
@@ -62,6 +62,14 @@
             <artifactId>hadoop-client</artifactId>
             <version>2.7.2</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.apache.flink/flink-shaded-hadoop-2-uber -->
+        <!--<dependency>-->
+            <!--<groupId>org.apache.flink</groupId>-->
+            <!--<artifactId>flink-shaded-hadoop-2-uber</artifactId>-->
+            <!--<version>2.7.5-9.0</version>-->
+        <!--</dependency>-->
+
 
         <dependency>
             <groupId>org.apache.kafka</groupId>
